--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build_and_test:
+  build:
     docker:
       - image: circleci/node:10
     working_directory: ~/repo
@@ -17,11 +17,22 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-  deploy_to_staging:
+      - run:
+          name: Run tests
+          command: npm test
+      - store_test_results:
+          path: test-results
+      - deploy:
+          name: deployment
+          command: |
+            curl --user ${CIRCLE_API_USER_TOKEN}: \
+                --data build_parameters[CIRCLE_JOB]=deploy_to_staging \
+                --data revision=$CIRCLE_SHA1 \
+                https://circleci.com/api/v1.1/project/github/Kharyb/kubernetes-voice-app
+               
+  deploy_to_staging:    
     docker:
       - image: google/cloud-sdk
-    requires:
-      -build_and_test
     environment:
       - PROJECT_NAME: "kubernetes-deployer"
       - GOOGLE_PROJECT_ID: "kubernetes-deployer-bfad9"
@@ -59,10 +70,10 @@ workflows:
   version: 2
   build_test_deploy:
     jobs:
-      - build_and_test
+      - build
       - deploy_to_staging:
           requires:
-            - build_and_test
+            - build
           filters:
             branches:
               only: master
